# DayOS

./: .gitignore  .gitmodules  CMakeLists.txt  clang-format.txt  setup-disk.sh  setup-env.sh  setup.sh
CMake/: DayOS.cmake
documentation/: TheDayOSOperatingSystem.tex  build-figures.sh
documentation/chapters/: DriverKit.tex  OperatingSystemInterfaces.tex  TheBootingProcess.tex
documentation/chapters/uml/: bootsequence.latex  bootsequence.puml  initprocess.latex  initprocess.puml
modules/: CMakeLists.txt
scripts/: build-image-external.sh  build-image.sh  test-stdio-hd-external.sh  test-stdio-hd.sh
scripts/grub/: floppy_menu.lst
